GNOME Bugzilla – Bug 754009
Metacity crashes with chromium using Alt+Tab switcher
Last modified: 2015-09-12 14:09:57 UTC
Steps to reproduce: 1. Open chromium browser. 2. Hit Alt+Tab. 3. Metacity immediately crashes. Package versions: - metacity current git master - chromium 44.0.2403.157 Distribution: Arch Linux Partial backtrace:
+ Trace 235375
It happens only when alt-tab-thumbnails are enabled.
Created attachment 310712 [details] [review] compositor: return cairo_surface_t instead of pixmap
Can you test this patch?
Yes, I tested it, and it fixes the problem. Thanks!
Unfortunately I still get the same trace when I hit Alt-Tab after Chromium launched, but its main window is not appeared yet on the screen. It's a short period, but I could easily reproduce the crash.
I could not reproduce with few tries... If you can easily reproduce then can you add some debug info in meta_ui_get_pixbuf_from_surface? For example printing cairo_surface_status, also width and height? Maybe adding this could stop it from crashing: if (cairo_surface_status (surface) != CAIRO_STATUS_SUCCESS) return NULL;
I always get CAIRO_STATUS_SUCCESS when the crash occurs, so the above code does not solve the problem. You could try to reproduce this problem by hitting Alt-Tab many times immediately after Chromium launched from the menu, and always release both Alt and Tab keys between calls.
Ok, I will try again... Can you get backtrace with cairo debugging symbols? Maybe bug is in cairo... What cairo version do you have?
Ok, I think I might have solution. Wait for patch...
Created attachment 311209 [details] [review] screen: add error trap in get_window_pixbuf
Please test patch above.
Okay, I cannot reproduce the crash after I applied your patch. Thanks!