compositor: return cairo_surface_t instead of pixmap

Replace get_window_pixmap with get_window_surface and move surface
creation from ui to compositor. This allows us to use correct
visual for surface creation.

https://bugzilla.gnome.org/show_bug.cgi?id=754009